# intentdb

./: .gitignore  Cargo.toml  Dockerfile  README.md  import_prompt.py  import_response.py
.github/workflows/: ci.yml
capture/: capture.py  idb_capture.sh
python/: intentdb.py
src/: hnsw.rs  main.rs  mcp.rs
ui/: index.html
